prevent wrapping instead of setting min-width for th in header

--- a/css/inner/builds.less
+++ b/css/inner/builds.less
@@ -62,8 +62,8 @@
         > th {
           width: 1%;
           font-weight: bold;
-          min-width: 100px;
           text-align: left;
+          white-space: nowrap;
         }
         > td {
           width: 40%;
